--- a/week2/css/index.css
+++ b/week2/css/index.css
@@ -61,8 +61,19 @@
 }
 
 @media screen and (max-width: 799.98px) {
+    .header {
+        width: 100%;
+        position: fixed;
+        top: 0;
+    }
+
     .nav-bar {
         background-color: #fff;
+    }
+
+    .menu-control {
+        opacity: 0;
+        z-index: -10;
     }
 
     .menu-txt {
